--- a/01_bases/index.html
+++ b/01_bases/index.html
@@ -7,15 +7,62 @@
 
     <script src="./components/messages.js"></script>
     <script src="./components/computed-properties.js"></script>
+    <script src="./components/methods.js"></script>
+    <script src="./components/vmodel.js"></script>
+    <script src="./components/vmodel-checkboxes.js"></script>
+    <script src="./components/emit.js"></script>
+    <script src="./components/parent-data.js"></script>
+    <script src="./components/child-data.js"></script>
+    <script src="./components/child-methods.js"></script>
+    <script src="./components/login-form.js"></script>
+    <script src="./components/loops.js"></script>
+    <script src="./components/conditionals.js"></script>
+    <script src="./components/slots.js"></script>
   </head>
   <body>
-    <div id="app">
+    <div id="app" style="margin-bottom: 100px;">
       <message></message>
       <computed></computed>
+      <vmodel></vmodel>
+      <vmodel-checkboxes></vmodel-checkboxes>
+      <emit v-on:cardbrand="showCarBrandFromEmitCmp( $event )"></emit> <!-- $event Es el dato del evento -->
+      <parent-data></parent-data>
+      <child-data ref="childData"></child-data>
+      <child-methods ref="childMethod"></child-methods>
+      <login-form></login-form>
+      <loops></loops>
+      <conditionals></conditionals>
+      <slots>
+        <p>Contenido del slot para el cuerpo</p>
+        <template slot="header">
+          <h3>Header del layout con Slots</h3>
+        </template>
+        <template slot="footer">
+          <h3>Footer del layout con Slots</h3>
+        </template>
+      </slots>
     </div>
     <script>
       new Vue({
-        el: '#app'
+        el: '#app',
+        mounted() {
+          const cmpName = this.$refs.childData.cmpName;
+          console.log( cmpName );
+          
+          setTimeout(() => {
+            this.$refs.childMethod.showCmpName()
+          }, 3000)
+        },
+        data () {
+          return {
+            appName: 'Iniciando con Vuejs'
+          }
+        },
+        methods: {
+          showCarBrandFromEmitCmp ( carBrand ) {
+            alert( carBrand );
+          }
+        }
       })
     </script>
   </body>
